--- a/src/components/Collapse/Collapse.module.scss
+++ b/src/components/Collapse/Collapse.module.scss
@@ -5,13 +5,13 @@
 .box {
     @include dimension($width: 100%);
     background-color: $background-color;
+    @include border($borderRadius: 5px);
     overflow: hidden;
 }
 
 .toggleBar{
     @include dimension($width: 100%, $height: 30px);
     padding: 0 10px; 
-    @include border($borderRadius: 5px);
     @include flex($justifyContent: space-between);
 }
 
@@ -25,10 +25,8 @@
 }
 
 .content {
-  background-color: #f7f7f7;
-  padding: 1rem;
-  font-size: 1rem;
-  color: #333;
+    background-color: rgba(246, 246, 246, 1);
+    @include padding(20px 20px)
 }
 
 // Styles pour desktop et plus grand
@@ -36,6 +34,7 @@
 
     .box{
         @include dimension($width: 100%);
+        @include border($borderRadius: 10px);
     }
 
     .toggleBar{
