--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -29,7 +29,7 @@
         gap: 1.785rem;
     }
 
-    p {
+    .p {
         @include textStyle($fontSize: 1.5rem, $color: $font-text-color);
     }
 }
